--- a/README.org
+++ b/README.org
@@ -1,5 +1,4 @@
 * Warning
-- I'm using [[http://www.vim.org][Vim]] key binding. Please see "Tips" section if you prefer the Emacs key binding.
 - People in Mainland China may need [[http://code.google.com/p/goagent/][goagent]] to download packages from ELPA. Run command "http_proxy=http://127.0.0.1:8087 emacs -nw" after starting goagent server (or any proxy server).
 - C++/C developers, you need tell Emacs where to search headers to make auto-complete work. See section `clang` for details.
 - I suggest Windows users using [[http://www.cygwin.com/][Cygwin]] version Emacs to avoid some overhead of setting up third party tools. But this configuration is still usable even in  native windows Emacs.
@@ -16,11 +15,10 @@ Most modern popular programming languages are supported (C/C++/Java/Ruby/Perl/Py
 - git or subversion is *NOT* needed. You *DONOT* need run 'git submodule update'.
 - optimized for cross-platform C++ development with CMake and wxWidgets
 - emacs-w3m (console browser)
-- eim (Chinese pinyin input method)
+- ibus (Chinese pinyin input method)
 - org2blog (post wordpress blog with org-mode)
 - make the configuration work on *ALL* platforms (Linux/Cygwin/Mac).
 - The configuration work with Emacs version >=24 but still usable with Emacs version 23 (tested with Emacs 23.4.1).
-- evil-mode and its plugins (Vim key binding)
 - yasnippet and my customized snippets (insert code snippet by typing less keys)
 
 * Install
@@ -44,7 +42,7 @@ The package manager will extract packages into ~/.emacs.d/elpa/.
 
 I also manually download and extract some packages into ~/.emacs.d/site-lisp/. Packages in ~/.emacs.d/site-lisp/ is not visible to Emacs package manager.
 
-My own snippets for [[https://github.com/capitaomorte/yasnippet][Yasnippet]] is in ~/.emacs.d/snippets.
+My own snippets for [[https://github.com/capitaomorte/yasnippet][Yasnippet]] is in ~/.emacs.d/my-snippets.
 
 Other directoris do not matter.
 
@@ -91,10 +89,6 @@ These tools are *OPTIONAL*. Your Emacs will NOT crash if they are not installed.
 - If you use `company-clang` (default), add `(setq company-clang-arguments '("-I/example1/dir" "-I/example2/dir"))` into ~/.emacs.d/init.el
 - If you use `cpputils-cmake` and `cmake`, `cpputils-cmake` will do all the set up for you.
 
-** [[https://addons.mozilla.org/en-us/firefox/addon/mozrepl/][MozRepl firefox addon]]
-- needed by [[http://www.emacswiki.org/emacs/MozRepl][MozRepl]]
-- install using firefox
-
 ** [[http://ctags.sourceforge.net][ctags]]
 - needed by many tags related plugins
 - install through OS package manager
@@ -114,20 +108,15 @@ These tools are *OPTIONAL*. Your Emacs will NOT crash if they are not installed.
 - conversion will happen automatically when exporting org-mode to odt
 - The conversion command is in variable `org-export-odt-convert-processes`
 - Install through OS package manager
-
 * OS package manager recommended
 - [[https://github.com/cfg/apt-cyg][apt-cyg]] at Cygwin
 - [[https://github.com/mxcl/homebrew][homebrew]] at Mac
 - any package manager at Linux
 
 * Report bug
-Please file bug report at [[https://github.com/redguardtoo/emacs.d]]. Don't send me email!
+Please file bug report at [[https://github.com/redguardtoo/.emacs.d]]. Don't send me email!
 
 * Tips
-By default EVIL (Vim emulation in Emacs) is used. You can comment out line containing "(require 'init-evil)" in init.el to unload it.
-
-Some package cannot be downloaded automatically because of network problem.
-
 You need manually `M-x list-packages` and install it or just `M-x package-refresh-content` and restart Emacs.
 
 You can speed up the start up by NOT loading some heavy weight components like evil or yasnippet. All you need to do is add below code into ~/.bashrc:
@@ -137,7 +126,7 @@ alias e=emacs -q --no-splash --eval="(setq light-weight-emacs t)" -l "$HOME/.ema
 
 If you use `gnus` for email (Gmail, for example). Check ~/.emacs.d/init-gnus.el which includes my most settings except my private stuff. Here is [[http://blog.binchen.org/?p=403][my Gnus tutorial]].
 
-To toggle Chinese input method (eim, for example), press `C-\` or run command `M-x toggle-input-method`.
+To toggle Chinese input method (ibus, for example), press `C-\` or run command `M-x toggle-input-method`.
 
-* My personal custom.el (OPTIONAL)
+* Personal custom.el (OPTIONAL)
 It's publicized at [[http://blog.binchen.org/?p=430]]. It contains my personal stuff like color-theme and time locale.
