fixed something for python-mode.

--- a/my-snippets/python-mode/try.3
+++ b/my-snippets/python-mode/try.3
@@ -1,4 +1,4 @@
-#-*- mode: Fundamental; -*-
+# -*- mode: Snippet; -*-
 #contributor : Meteor Liu <meteor1113@gmail.com>
 #name : Try/Except/Else/Finally
 # --
