--- a/my-snippets/python-mode/try.1
+++ b/my-snippets/python-mode/try.1
@@ -1,4 +1,4 @@
-#-*- mode: Fundamental; -*-
+#-*- mode: snippet; -*-
 #contributor : Meteor Liu <meteor1113@gmail.com>
 #name : Try/Except/Else
 # --
